// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiselect component should be defined and renders correctly (snapshot) 1`] = `
<div>
  <div
    class="form-field form-field--multiselect"
  >
    <div
      class="multiselect"
    >
      <div
        class="chip__wrapper"
      >
        <label
          class=""
        />
        <span
          class="chip__wrapper__clear"
          data-cy="multiSelect--clearAll-button"
        >
          Clear all
        </span>
      </div>
      <div
        class="multiselect__input__container"
      >
        <div
          class="multiselect__input__container__chips"
        >
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
              data-cy="multiSelect--chip1-label"
            >
              Blaze 1
            </div>
            <div
              class="chip__icon chip__icon--delete"
              data-cy="multiSelect--chip1-icon"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
              data-cy="multiSelect--chip2-label"
            >
              Blaze 2, multi main label
            </div>
            <div
              class="chip__icon chip__icon--delete"
              data-cy="multiSelect--chip2-icon"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="form-field form-field--input  "
          >
            <label
              class=""
            />
            <input
              data-testid="input"
              placeholder="Choose..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect component should be defined and renders correctly when is opened (snapshot) 1`] = `
<div>
  <div
    class="form-field form-field--multiselect"
  >
    <div
      class="multiselect"
    >
      <div
        class="chip__wrapper"
      >
        <label
          class=""
        />
        <span
          class="chip__wrapper__clear"
          data-cy="multiSelect--clearAll-button"
        >
          Clear all
        </span>
      </div>
      <div
        class="multiselect__input__container"
      >
        <div
          class="multiselect__input__container__chips"
        >
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
              data-cy="multiSelect--chip1-label"
            >
              Blaze 1
            </div>
            <div
              class="chip__icon chip__icon--delete"
              data-cy="multiSelect--chip1-icon"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
              data-cy="multiSelect--chip2-label"
            >
              Blaze 2, multi main label
            </div>
            <div
              class="chip__icon chip__icon--delete"
              data-cy="multiSelect--chip2-icon"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="form-field form-field--input  "
          >
            <label
              class=""
            />
            <input
              data-testid="input"
              placeholder="Choose..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="multiselect__dropdown"
      >
        <div>
          <div
            style="overflow: auto; will-change: transform; height: 245px; width: 100%;"
          >
            <div
              style="position: relative; width: 100%; min-height: 100%; height: 135px;"
            >
              <div
                style="position: absolute; top: 0px; left: 0px; width: 100%; height: 45px;"
              >
                <div
                  class="form-field form-field--checkbox"
                  role="button"
                >
                  <input
                    checked=""
                    class="form-checkbox"
                    data-cy="multiselect-checkbox-cy-0"
                    data-testid="checkbox-0"
                    id="1-checkbox"
                    name="Blaze 1"
                    readonly=""
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="form-field--checkbox-full"
                  >
                    <label
                      for="1-checkbox"
                    >
                      <span>
                        Blaze 1
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                style="position: absolute; top: 45px; left: 0px; width: 100%; height: 45px;"
              >
                <div
                  class="form-field form-field--checkbox"
                  role="button"
                >
                  <input
                    checked=""
                    class="form-checkbox"
                    data-cy="multiselect-checkbox-cy-1"
                    data-testid="checkbox-1"
                    id="2-checkbox"
                    name="Blaze 2,multi main label,Sub label 1,sub label 2,sub label 3"
                    readonly=""
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="form-field--checkbox-full"
                  >
                    <label
                      for="2-checkbox"
                    >
                      <span>
                        Blaze 2, multi main label
                      </span>
                      <span>
                        Sub label 1, sub label 2, sub label 3
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                style="position: absolute; top: 90px; left: 0px; width: 100%; height: 45px;"
              >
                <div
                  class="form-field form-field--checkbox"
                  role="button"
                >
                  <input
                    class="form-checkbox"
                    data-cy="multiselect-checkbox-cy-2"
                    data-testid="checkbox-2"
                    id="3-checkbox"
                    name="Blaze 3,Sub label 1,sub label 2"
                    readonly=""
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="form-field--checkbox-full"
                  >
                    <label
                      for="3-checkbox"
                    >
                      <span>
                        Blaze 3
                      </span>
                      <span>
                        Sub label 1, sub label 2
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
